<resources>
    <string name="app_name">Beýik Ýol</string>
    <string name="api_key">97058936-8a36-40fd-87f8-2185696a39cd</string>
    <string name="selectedlanguage">Dil saýla:</string>
    <string name="Gir">Indiki</string>
    <string name="Dobropojalowat">Hoş Geldiňiz!!!</string>
    <string name="skip_btn">Geçir</string>
    <string name="language">Türkmen</string>
    <string name="search">Salgyny giriziň</string>
    <string name="first_header">Türkmenistanda ilkinji gezek!</string>
    <string name="second_header">Ulanmagyň ýeňillikleri</string>
    <string name="thrid_header">Ýoluňyz ak bolsun!</string>
    <string name="first_desq">Kartany ulanmak arkaly awtoulagyň ýerleşýän ýerini anyklaýan, geçmeli wagtyny hasaplamak bilen ýoluny gurnaýan, awtoulag bilen bagly çykdajylary bellige alýan we awto sürüjiler üçin iň peýdaly funksiýalary hödürleýän ilkinji “Beýik Ýol” ykjam programma üpjünçiligi Siziň hyzmatyňyzda!</string>
    <string name="second_desq">Bu ykjam programma üpjünçiligiň aýratynlyklary, onuň sada dizaýny bilen bagly bolup özüniň işjeňligi bilen tapawutlanýar we ýönekeý görnüşi bilen awto sürüjilere ulanmakda aňsat ýoluny hödürleýär. Iň uly aýratynlyklaryň biri hem, Internet ulgamyna birikmesiz, awtoulag bilen bagly işleri bu ykjam programma üpjünçiliginde amala aşyryp bolýar.</string>
    <string name="thrid_desq">“Beýik Ýol” – Siziň ynamdar ýolbelediňiz!</string>
    <string name="karta">Karta</string>
    <string name="ulagja">Ulagjaý</string>
    <string name="sazlama">Sazlamalar</string>
    <string name="ol_hadysalary">Ýol hadysalary</string>
    <string name="ewakuator">Ewakuator</string>
    <string name="ykdajylar">Çykdajylar</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="skip">Başla</string>
    <string name="ilkinji">Ilkinji</string>
    <string name="ikinji">Ikinji</string>
    <string name="inji">Üçinji</string>
    <string name="menzile_tarap_rahat_oly_sa_la">Menzile tarap rahat ýoly saýla</string>
    <string name="home">Baş Sahypa</string>
    <string name="about">Barada</string>
    <string name="settings">Sazlamalar</string>
    <string name="benzin">Ýangyç</string>
    <string name="calyshmyk">Çalyşmak</string>
    <string name="remont">Remont</string>
    <string name="car_info">Ulag maglumaty</string>
    <string name="pozmak">Pozmak</string>
    <string name="pa_la">Paýlaş</string>
    <string name="meni_ulaglarym">Meniň Ulaglarym</string>
    <string name="my_cars">Ulagjaý</string>
    <string name="ulag_markasy">Ulag markasy</string>
    <string name="markasyny_sa_la">Markasyny saýla:</string>
    <string name="modelini_sa_la">Modelini saýla:</string>
    <string name="g_rn_ini_sa_la">Görnüşini saýla:</string>
    <string name="motory_g_rn_i">Motoryň görnüşi:</string>
    <string name="motory_g_wr_mi">Motoryň Göwrümi:</string>
    <string name="korobkany_sa_la">Korobkany saýla:</string>
    <string name="ulag_ylyny_sa_la">Ulag ýylyny saýlaň:</string>
    <string name="win_kod">Vin kod (17 simwol):</string>
    <string name="e_esini_telefony">Eýesiniň telefony</string>
    <string name="atda_saklat">Ýatda Saklat</string>
    <string name="surat_go_mak">&#160;&#160;&#160;&#160;&#160;Surat goşmak</string>
    <string name="e_esini_telefon_belgisi">Eýesiniň telefon belgisi</string>
    <string name="error1">Markany saýlaň</string>
    <string name="error2">Model saýlaň</string>
    <string name="error3">Görnüş saýlaň</string>
    <string name="error4">Ýylyny saýlaň</string>
    <string name="error5">Motor görnüşini saýlaň</string>
    <string name="error6">Motor güýjüni saýlaň</string>
    <string name="error7">Korobgany saýlaň</string>
    <string name="error8">Geçen ýoluny giriziň</string>
    <string name="error9">Vin koduny giriziň</string>
    <string name="error10">Telefon belgini giriziň</string>
    <string name="error_title">Maglumatary doly giriziň!!!</string>
    <string name="error_title2">Ýalňyşlyk ýüze çykdy!!!</string>
    <string name="error_title3">Gaýtadan synanşyň!!!</string>
    <string name="howwa">Hawa</string>
    <string name="ok">Ýok</string>
    <string name="attention">Üns beriň!</string>
    <string name="sorag">Siz çyndanam pozmak isleýäňizmi?</string>
    <string name="maglumatlar_bazasy_bo">Maglumatlar bazasy boş</string>
    <string name="ga_tadan">Gaýtadan</string>
    <string name="ulag_maglumaty">Ulag maglumaty</string>
    <string name="model">Model:</string>
    <string name="type">Görnüşi:</string>
    <string name="km_miles">Km/Miles:</string>
    <string name="marka">Marka:</string>
    <string name="gu_ulan_benzini_m_beri_litr">Möçberi (litrde)</string>
    <string name="ge_ilen_oly_girizi">Geçen ýoly KM</string>
    <string name="litre_error">Guýulan benziniň möçberini giriziň</string>
    <string name="succes">Üstünlükli hasaba alyndy!!!</string>
    <string name="budilnik">Ýatlatmak</string>
    <string name="motor_filtre">&#160;&#160;&#160;&#160;Motor Filter</string>
    <string name="motor_filtre2">Motor Filter</string>
    <string name="motor_yag">&#160;&#160;&#160;&#160;Motor ýag</string>
    <string name="motor_yag2">Motor ýag</string>
    <string name="korobka_yag_we_filtr">&#160;&#160;&#160;&#160;Korobka ýag we filter</string>
    <string name="korobka_yag_we_filtr2">Korobka ýag we filter</string>
    <string name="howa_filtr">&#160;&#160;&#160;&#160;Howa filter</string>
    <string name="howa_filtr2">Howa filter</string>
    <string name="salon_filtr">&#160;&#160;&#160;&#160;Salon filter</string>
    <string name="salon_filtr2">Salon filter</string>
    <string name="ene_n_e_km_den_aly_a_yz">Indiki çalyşmaly KM</string>
    <string name="warning">Ýene näçe km-den çalyşýanyňyzy giriziň!!!</string>
    <string name="warning1">Remont barada giňişleýin maglumat giriziň!!!</string>
    <string name="sene">Sene:</string>
    <string name="km">Häzirki km sany giriziň</string>
    <string name="item1">Hemmesi</string>
    <string name="item2">Şu hepde</string>
    <string name="item3">Şu aý</string>
    <string name="item4">Geçen aý</string>
    <string name="item5">Geçen hepde</string>
    <string name="item6">Şu ýyl</string>
    <string name="item7">Geçen ýyl</string>
    <string name="item8">Iň soňky</string>
    <string name="must">Çalyşmak wagty boldy</string>
    <string name="must1">Bellenen wagtyndan gijä galdyňyz!!!</string>
    <string name="understod">Düşnükli</string>
    <string name="bad">Inkär etmek</string>
    <string name="ulaglarym_barada">Ulaglarym barada</string>
    <string name="biz_barada">Biz Barada</string>
    <string name="surat_bosh">Surat saýlaň</string>
    <string-array name="types_en">
        <item>Automobile</item>
        <item>Bus</item>
        <item>Truck</item>
    </string-array>
    <string-array name="types_tm">
        <item>Ýeňil ulag</item>
        <item>Awtobus</item>
        <item>Ýük ulagy</item>
    </string-array>
    <string-array name="types_ru">
        <item>Автомобиль</item>
        <item>Автобус</item>
        <item>Грузовик</item>
    </string-array>
    <string-array name="transmission_en">
        <item>Mechanical</item>
        <item>Automatic</item>
        <item>Tiptronic</item>
        <item>CVT</item>
    </string-array>
    <string-array name="transmission_ru">
        <item>Механический</item>
        <item>Автоматический</item>
        <item>Типтроник</item>
        <item>CVT</item>
    </string-array>
    <string-array name="transmission_tm">
        <item>Mehaniki</item>
        <item>Awtomat</item>
        <item>Tiptronik</item>
        <item>CVT</item>
    </string-array>
    <string name="transmission">Korobka:</string>
    <string name="engine_type">Motor görnüşi:</string>
    <string name="engine_power">Motor Kuwwaty:</string>
    <string name="year">Ýyly:</string>
    <string name="vin">Vin:</string>
    <string name="phone_number">Telefon belgisi:</string>
    <string name="frion">&#160;&#160;&#160;&#160;Freon</string>
    <string name="frion2">Freon</string>
    <string name="g_zleg">Gözleg...</string>
    <string name="yldyz_go">Ýyldyz Goş</string>
    <string name="yldyz_go1">Gaty Pes</string>
    <string name="yldyz_go2">Has hem köpüräk</string>
    <string name="yldyz_go3">Şeýle dowam et</string>
    <string name="yldyz_go4">Gowy</string>
    <string name="yldyz_go5">Örän gowy!!!</string>
    <string name="bizi_yldyzlar_bilen_golda">Bizi ýyldyzlar bilen goldaň!!!</string>
    <string name="ulag_go_mak">Ulag Goşmak</string>
    <string name="ulag_u">Ulag Üýtgetmek</string>
    <string name="pe_dalanmak_ertleri">Peýdalanmak şertleri</string>
    <string name="running">Programma işe göýberildi...</string>
    <string name="title_activity_routing_map">Karta</string>
    <string name="select">Gerek bolan görnüşi saýlaň</string>
    <string name="from_my">Meniň duran ýerimden ýoly hasaplamaly</string>
    <string name="two_lo">Iki salgynyň (nokadyň) arasyny hasaplamaly</string>
    <string name="loading">Maglumatlar ýüklenýär...</string>
    <string name="please_wait">Biraz garaşyň...</string>
    <string name="start_position">Başlangyç nokady</string>
    <string name="end_position">Ahyrky nokady</string>
    <string name="points">Kartanyň üstüne basmak arkaly nokatlary giriziň!!!</string>
    <string name="olu_yzy_rahatlygyny_du_u">Ýoluňyzyň rahatlygyny duýuň!!!</string>
    <string name="ba_lat">Başlat</string>
    <string name="ge_en_kilometrini_girizi">Geçen kilometrini giriziň:</string>
    <string name="remont_barada_gi_i_le_in_maglumat">Remont barada giňişleýin maglumat</string>
    <string name="deleted">Pozuldy</string>
    <string name="not_deleted">Pozulmady</string>
    <string name="cancel">Ret etmek</string>
    <string name="add_picture">Surat goşmak üçin üstüne basyň</string>
    <string name="route_not_found">Ugury çyzyp bolmady!!!</string>
    <string name="ugur_yzmak">Ugur çyzmak</string>
    <string name="search_title">Gözlemek</string>
    <string name="g_zleg_taryhy">Gözleg taryhy</string>
    <string name="mapbox_api" translatable="false">pk.eyJ1Ijoic2hhZ2VsZGkiLCJhIjoiY2tsdzZ2cnlqMDB2ZDMybzh5bmpqNmltaiJ9.X4WJV-cLSch7-K3eFsObWA</string>
    <string name="ugur_g_rkeziji">Aýdyň görkez</string>
    <string name="taze_update">Üýtgetmek</string>
    <string name="taze_km">KM:</string>
    <string name="about_text">
        "Beyik Ýol" - Aşgabat şäherindäki ýollaryň dyknyşygyny kesgitlemek bilen ýollarda ulaglaryň ýagdaýyny görkezýär. Ykjam programmamyzyň islendik ulanyjysy öz wagtynda maglumat alyp biler we ugurlaryny netijeli meýilleşdirip biler. Bu ykjam programma üpjünçiligimiziň möhüm aýratynlyklaryndan biri, adatdan daşary ýagdaý ýüze çykan halatynda gyssagly kömek soramak mümkinçiligidir. Bu ykjam programma indiki görnüşlerinde täzeden işlenip taýýarlanar.
    </string>
    <string name="terms_title"> Ulanyjy şertnamasy we programma üpjünçiligini ulanmagyň şertleri</string>
</resources>