<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:focusable="true"
    android:paddingTop="12dp"
    android:focusableInTouchMode="true"
    tools:context=".Activity.Car.Add_Car">

    <include
        android:id="@+id/toolbar"
        layout="@layout/garage_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/markasyny_sa_la"
                android:textColor="@color/third"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/marka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/edit_bg"
                android:padding="5dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/modelini_sa_la"
                android:textColor="@color/third"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/edit_bg"
                android:padding="5dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/g_rn_ini_sa_la"
                android:textColor="@color/third"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/edit_bg"
                android:padding="5dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/motory_g_rn_i"
                android:textColor="@color/third"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/engine_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/edit_bg"
                android:padding="5dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/motory_g_wr_mi"
                android:textColor="@color/third"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/power"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/edit_bg"
                android:padding="5dp"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/korobkany_sa_la"
                android:textColor="@color/third"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/transmission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/edit_bg"
                android:padding="5dp"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/ulag_ylyny_sa_la"
                android:textColor="@color/third"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/yearSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/edit_bg"
                android:padding="5dp"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/ge_en_kilometrini_girizi"
                android:textColor="@color/third"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/miles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/edit_bg"
                android:hint="km..."
                android:inputType="numberSigned"
                android:padding="15dp"
                android:textColor="@color/third"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/win_kod"
                android:textColor="@color/third"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/vin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/win_kod"
                android:inputType="text"
                android:maxLength="17"
                android:padding="15dp"
                android:textColor="@color/third"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/e_esini_telefony"
                android:textColor="@color/third"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/edit_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/region"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:drawableTint="#000"
                    android:gravity="center_vertical"
                    android:hint="@string/e_esini_telefon_belgisi"
                    android:padding="0dp"
                    android:text="+993"
                    android:textColor="@color/third"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/e_esini_telefon_belgisi"
                    android:inputType="number"
                    android:padding="10dp"
                    android:text=""
                    android:textColor="@color/third"
                    android:textSize="15sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/add_image_st"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:button="@drawable/custom_checkbox"
                android:checked="true"
                android:text="@string/surat_go_mak"
                android:textColor="@color/third"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/add_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/smallcarinfobg"
                android:orientation="vertical"
                android:paddingBottom="20dp">


                <ImageView
                    android:id="@+id/car_image"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:layout_margin="12dp" />

                <LinearLayout
                    android:id="@+id/placeholoder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical"
                    android:paddingTop="40dp">

                    <ImageView
                        android:id="@+id/car_image_placeholder"
                        android:layout_width="37dp"
                        android:layout_height="37dp"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:src="@drawable/add_image" />


                    <TextView
                        android:id="@+id/tv_add_picture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/car_image"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/add_picture"
                        android:textAlignment="center"
                        android:textColor="@color/first"
                        android:textSize="16sp" />

                </LinearLayout>


            </RelativeLayout>


            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:textAllCaps="false"
                android:background="@drawable/save_btn"
                android:padding="5dp"
                android:text="@string/atda_saklat"
                android:textColor="#fff"
                />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>