<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="12dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/bizi_yldyzlar_bilen_golda"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/st_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t1"
            />

        <TextView
            android:id="@+id/t2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/st_img"
            android:text="@string/yldyz_go"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            />

        <RatingBar
            android:id="@+id/rating"
            android:layout_below="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:numStars="5"
            />

        <LinearLayout
            android:layout_below="@id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:id="@+id/cancel"
                android:background="@drawable/r_s"
                android:layout_marginEnd="30dp"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                />
            <Button
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:id="@+id/back"
                android:background="@drawable/green"
                android:text="@string/howwa"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>